Bug 569583 - GetParent returns nsWindow::mParent in nsWindow.cpp. r=jimm